hw18-docker-k8s/k8s/discovery-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-discovery-server
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: k8s-discovery-server
  type: ClusterIP
