hw18-docker-k8s/k8s/discovery-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-discovery-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /discovery/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-discovery-server
                port:
                  number: 8761
          - path: /(eureka/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-discovery-server
                port:
                  number: 8761
